--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -11,12 +11,18 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <title>Testimonials</title>
+   <!--Title-->
+{%block title%}
+<title>Testimonials</title>
+{%endblock%}
+
   </head>
   <body>
     <!--Navbar-->
     {%include 'navigation.html'%}
-    <div class="container">
+
+{%block content%}
+<div class="container">
       <h3 class="mt-5 text-center">Testimonials</h3>
       <div class="row">
         <div class="col">
@@ -76,12 +82,4 @@
         </div>
       </div>
     </div>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+{%endblock%}
